<resources>
    <string name="app_name">EasyBuy</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password or e-mail is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- bottom navigation bar strings -->
    <string name="title_dashboard">Dashboard</string>
    <string name="title_upload">Upload</string>
    <string name="title_about">About</string>
    <string name="title_account">Acount</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ip string -->
    <string name="ip_addr">160.39.250.178</string>

</resources>
